fix the flex-grid gap situation

--- a/css/ui/flex-grid.css
+++ b/css/ui/flex-grid.css
@@ -18,6 +18,7 @@
 }
 
 .ui-grid-row {
+    --row-gap: var(--gap, 0);
     width: 100%;
     justify-content: flex-start;
     display: flex;
@@ -25,7 +26,7 @@
 }
 
 .ui-grid-row > * {
-    margin: 0 var(--gap, 0);
+    margin: 0 var(--row-gap);
 }
 
 .ui-grid-row > *:first-child {
